--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@splinetool/react-spline": "^4.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.553.0",
     "next": "16.0.2",
+    "prisma": "^6.19.0",
     "react": "19.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
+    "recharts": "^3.4.1",
     "s": "^1.0.0",
     "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2"
